# pioneerML

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  =3.6.0  Dockerfile  README.md  classify_groups.ipynb  group_splitter.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  workspace.yaml
.zenml/: zenml.db
deprecated/: README.md
env/: README.md  environment.yml  requirements.txt  setup_ev_venv.sh  setup_uv_conda.sh  uv-setup.sh
graph_data/: models.py  utils.py
notebooks/: DATA_LOADER_UPDATE.md  README.md  zenml_quickstart.ipynb  zenml_quickstart.py
notebooks/.zenml/: zenml.db
notebooks/data_generation/: generate_endpoints.ipynb  generate_group_probs.ipynb  generate_group_probs_batched.ipynb
notebooks/examples/: Particle_Grouping_Example.ipynb  README.md  dummy_particle_grouping.ipynb  pipeline_demo.py  pipeline_tutorial.ipynb  pipeline_tutorial.py  synthetic_group_classification.ipynb  synthetic_group_classification.py
notebooks/inference/: classify_groups.ipynb  endpoint_regression.ipynb  event_splitting.ipynb  group_classification.ipynb  group_splitter.ipynb  group_splitting.ipynb  pion_stop_regression.ipynb  positron_angle_regression.ipynb
notebooks/training/: ENDPOINT_REGRESSOR.md  classify_groups.ipynb  classify_groups_event.ipynb  endpoint_regression.ipynb  endpoints.ipynb  endpoints_event.ipynb  event_splitter_event.ipynb  event_splitting.ipynb  full_chain.ipynb  group_classification.ipynb  group_splitter.ipynb  group_splitter_event.ipynb  group_splitting.ipynb  pion_stop.ipynb  pion_stop_regression.ipynb  positron_angle.ipynb  positron_angle_regression.ipynb
notebooks/tutorials/: 00_zenml_quickstart.ipynb  00_zenml_quickstart.py  01_building_zenml_pipelines.ipynb  01_building_zenml_pipelines.py  01_quickstart_pipeline.ipynb  02_custom_models_training.ipynb  02_custom_models_training.py  03_hyperparameter_tuning.ipynb  03_hyperparameter_tuning.py  04_custom_metrics_and_plots.ipynb  04_evaluation_plots.ipynb  04_evaluation_plots.py
notebooks/validation/: event_splitting.ipynb  group_classification.ipynb  group_classification_embeddings.ipynb  group_classifier.ipynb  group_splitter.ipynb  group_splitting.ipynb  group_splitting_embeddings.ipynb  pion_stop_regression.ipynb  positron_angle_regression.ipynb  validate_endpoints.ipynb  validate_group_classifier.ipynb  validate_group_splitter.ipynb  validate_pion_stop.ipynb  validate_positron_angle.ipynb
scripts/: README.md  convert_tutorials_to_notebooks.py  debug_torch_env.py  debug_umap_embedding.py  debug_zenml_env.py  quickstart_eval.py  run_dummy_particle_grouping.py  test_zenml_pipeline.py  train_classifier.py  validate_group_classifier.py
scripts/debug/: validate_group_classifier.py
scripts/docker/: README.md  build.sh  run.sh
scripts/env/: README.md  setup_uv_conda.sh  setup_uv_venv.sh
scripts/jupyter/: start_lab.sh  start_notebook.sh  stop_lab.sh  stop_notebook.sh
src/pioneerml/: __init__.py  cli.py
tests/: __init__.py  conftest.py
tests/data/: __init__.py  test_datasets.py  test_time_grouping.py
tests/evaluation/: test_metrics.py
tests/models/: test_architectures.py  test_models.py
tests/pipelines/: __init__.py  test_context.py  test_model_runner_defaults.py  test_pipeline.py  test_stage.py
tests/training/: test_lightning.py  test_relative_early_stopping.py
trained_models/group_classifier/: group_classifier_20251203_012349_metadata.json  group_classifier_20251203_112338_metadata.json
trained_models/groupclassifier/: groupclassifier_20251206_002042_group_classification_optuna_pipeline-2025_12_06-00_20_23_644539_metadata.json  groupclassifier_20251206_002444_group_classification_optuna_pipeline-2025_12_06-00_24_21_016477_metadata.json  groupclassifier_20251206_002729_group_classification_optuna_pipeline-2025_12_06-00_27_11_681545_metadata.json  groupclassifier_20251206_010520_group_classification_optuna_pipeline-2025_12_06-01_04_55_093128_metadata.json  (+3 more)
zenml_pipelines/: __init__.py  training_pipeline.py
(+1435 files in other folders)
